use structs for json response validation
